name:                gridland
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Joe Vargas
maintainer:          https://github.com/jxv
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag demo
  description: build demo
  default: False

library
  exposed-modules:
    GridLand
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.8 && <4.9,
    SDL,
    SDL-image,
    SDL-mixer,
    SDL-ttf,
    SDL-gfx,
    astar,
    containers,
    tuple,
    random,
    grid
    -- htiled
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fPIC

executable demo
  main-is: Main.hs
  default-extensions:
    RecordWildCards
  if flag(demo)
    build-depends:
      base, gridland
    buildable: True
  else
    buildable: False
  hs-source-dirs: demo
  default-language: Haskell2010
